[package]
name = "jenkins-builder-accounter"
version = "0.1.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]

[dependencies]
jenkins_api = "0.5.0"
failure = "0.1.2"
log = "0.4.5"
stderrlog = "0.4.1"
chrono = "0.4.6"
serde_yaml = "0.8.4"
serde_derive = "1.0.79"
serde = "1.0.79"
regex = "1.0.5"
rayon = "1.0.2"
envy = "0.3.2"
