[package]
name = "jenkins-builder-accounter"
version = "0.1.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]

[dependencies]
chrono = "0.4.6"
envy = "0.3.2"
failure = "0.1.2"
jenkins_api = "0.5.0"
log = "0.4.5"
rayon = "1.0.2"
regex = "1.0.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_yaml = "0.8.4"
stderrlog = "0.4.1"
